redefined chapter and section format added example pages

--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -1,3 +1,11 @@
 \begin{thebibliography}{9}
-	
+\bibitem{looseTweets} 
+Huina Mao, Xin Shuaiand Apu Kapadia.\newline
+\textit{Loose Tweets: An Analysis of Privacy Leaks on Twitter}. \newline
+WPES 2011.
+
+\bibitem{dontTweetThis}
+Qiaozhi Wang, Hao Xue, Fengjun Li, Dongwon Lee, and Bo Luo.\newline
+\textit{\#DontTweetThis: Scoring Private Information in Social Networks}. \newline
+POPETS 2019
 \end{thebibliography}
