--- a/indice.tex
+++ b/indice.tex
@@ -14,6 +14,12 @@
 \usepackage{listings}
 \usepackage{makeidx}
 \usepackage{comment}
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhf{}
+\rhead{Cap.\thechapter}
+\fancyhead[L]{\rightmark}
+
 
 \lstset{frame=tb,
 	language=Java,
@@ -23,6 +29,10 @@
 }
 \graphicspath{ {./Figure/} }
 
+\usepackage{titlesec}
+
+\titleformat{\chapter}{\normalfont\huge\bf}{\thechapter.}{20pt}{\huge\bf}
+\titleformat{\section}{\normalfont}{\thesection.}{16pt}{\normalfont}
 
 
 \begin{document}
@@ -37,7 +47,7 @@
 	{\large Dipartimento di Informatica\\Corso di Laurea Magistrale in Informatica}\\
 	\hrulefill
 	\vfill
-	{\large Nome esame}\\[0.2truecm]
+	{\large Tesi di Laurea Magistrale in Informatica}\\[0.2truecm]
 	%{\Large Informatica}\\
 	\vfill\vfill
 	{\LARGE {\bf Titolo}}
@@ -46,13 +56,13 @@
 	
 	
 	\ \ \ \ \ \ \ {\bf Docente} \hfill {\bf Candidato}\ \ \\
-	Prof. \textbf{ Nome docente} \hfill  \textbf{Nome candidato}
-	\centerline{\hfill Matricola: 0000000000}
+	Prof.ssa \textbf{Delfina Malandrino} \hfill  \textbf{Francesco Vicidomini}
+	\centerline{\hfill Matricola: 051210533}
 	
 	
 	\vfill
 	\hrulefill 
-	\begin{center} Anno Accademico AAAA-AAAA \end{center}
+	\begin{center} Anno Accademico 2019-2020 \end{center}
 	
 \end{center}
 \end{titlepage}
@@ -72,16 +82,17 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter*{Introduzione}
-\setcounter{page}{1} 		
-\pagenumbering{arabic} 
-\input{Introduzione.tex}
+\chapter*{Abstract}
+ 
+\input{Abstract.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Titolo capitolo}
+\setcounter{page}{1} 		
+\pagenumbering{arabic}
 \input{Capitolo1.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
