removed unused packages

--- a/indice.tex
+++ b/indice.tex
@@ -6,20 +6,18 @@
 \usepackage{cite}
 \usepackage{amsmath}
 \usepackage[table,xcdraw]{xcolor}
-\usepackage[italian]{minitoc}% per gli accenti
-\usepackage{fancybox}
 \usepackage{verbatim}
 \usepackage{url}
-\usepackage{color}
 \usepackage{listings}
-\usepackage{makeidx}
 \usepackage{comment}
+
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
+\setlength{\headheight}{17pt}
 \rhead{Cap.\thechapter}
 \fancyhead[L]{\rightmark}
-
+\cfoot{\thepage}
 
 \lstset{frame=tb,
 	language=Java,
