added bozza chapter 2

--- a/Abstract.tex
+++ b/Abstract.tex
@@ -1,3 +1,3 @@
 Gli Online Social Network(OSN) sono tra le applicazioni che hanno maggiore utenza e posseggono gran parte dei dati personali dei loro utenti.\newline
 La gestione dei dati personali da parte di questi colossi dell'IT viene regolata attraverso apposite leggi, ma spesso sono gli utenti stessi a pubblicare involontariamente delle informazioni sensibili che possono esporli a dei rischi. Ad esempio abbiamo sentito spesso parlare di furti in appartamento fatti proprio perché i ladri avevano visto sui social delle vittime che queste erano partite per una vacanza.\newline
-L'obiettivo di questa tesi è aggiungere al plugin di Chrome Knoxly la possibilità di riconoscere dati sensibili in base al contesto in cui sono stati scritti. Per raggiungere questo obiettivo è stata sviluppata e installata all'interno di Knoxly una intelligenza artificiale in grado di riconoscere il dato sensibile estrapolandolo dalla semantica della frase in cui viene menzionato. Grazie all'utilizzo di Universal Sentence Encoder sarà possibile individuare il dato sensibile anche se esso è scritto in italiano, inglese, francese ecc...
+L'obiettivo di questa tesi è aggiungere al plugin di Chrome Knoxly la possibilità di riconoscere dati sensibili in base al contesto in cui sono stati scritti e in base a quanto l'utente reputi sensibili questi dati. Per raggiungere questo obiettivo è stata sviluppata e installata all'interno di Knoxly una intelligenza artificiale in grado di riconoscere il dato sensibile estrapolandolo dalla semantica della frase in cui viene menzionato, in seguito l'utente indicherà quanto questo dato sia sensibile per egli. Ad esempio se il proprietario di una pasticceria tweetta "Ho una pasticceria in via Roma" l'indirizzo viena riconoscito come un dato sensibile ma per il pasticciere questo non lo è perchè sta usando quel tweet per farsi pubblicità quindi egli comunicherà al sistema che per lui quel dato non è sensibile e il sistema aggiornerà la sua IA.
