--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -4,6 +4,11 @@ Huina Mao, Xin Shuaiand Apu Kapadia.\newline
 \textit{Loose Tweets: An Analysis of Privacy Leaks on Twitter}. \newline
 WPES 2011.
 
+\bibitem{privacyDetective}
+Aylin Caliskan, Jonathan Walsh, Rachel Greenstadt.\newline
+\textit{Privacy Detective: Detecting Private Information and Collective Privacy Behavior in a Large Social Network}.\newline
+WPES 2014
+
 \bibitem{dontTweetThis}
 Qiaozhi Wang, Hao Xue, Fengjun Li, Dongwon Lee, and Bo Luo.\newline
 \textit{\#DontTweetThis: Scoring Private Information in Social Networks}. \newline
