Edited "Pulizia dati", replaced tbl misure & added labeling

--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -13,4 +13,8 @@ WPES 2014
 Qiaozhi Wang, Hao Xue, Fengjun Li, Dongwon Lee, and Bo Luo.\newline
 \textit{\#DontTweetThis: Scoring Private Information in Social Networks}. \newline
 POPETS 2019
+
+\bibitem{dataSpectrum}
+John M.M. Rumbold, Barbara K. Pierscionek\newline
+\textit{What Are Data? A Categorization of the Data Sensitivity Spectrum}.
 \end{thebibliography}
