--- a/indice.tex
+++ b/indice.tex
@@ -11,6 +11,8 @@
 \usepackage{listings}
 \usepackage{comment}
 \usepackage{hyperref}
+\usepackage{multirow}
+\usepackage{placeins}
 %rimuove bordi dai link
 \hypersetup{
     colorlinks=true,
@@ -104,8 +106,16 @@
 \input{Capitolo1.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{I dati}
+\chapter{Background}
 \input{Capitolo2.tex}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\chapter{Related Work}
+\input{Capitolo3.tex}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\chapter{Metodologia}
+\input{Capitolo4.tex}
 
 %\chapter{Titolo capitolo}
 %\input{Capitolo3.tex}
