--- a/Capitolo1.tex
+++ b/Capitolo1.tex
@@ -39,4 +39,4 @@ Abbiamo scelto di utilizzare un sottoinsieme di temi di partenza per dare una co
     \item lavoro
     \item viaggi
 \end{enumerate}
-Questi temi sono stati scelti per due motivi, il primo è che molti di questi temi fanno parte della normativa GDPR quindi è una legge a dirci che i dati appartenenti a quelle categorie sono sensibili e il secondo è che molti dei temi che verranno trattati sono già stati utilizzati negli studi sopracitati ma anche in altri studi riguardanti la privacy detection e il privacy leaking.
+Questi temi sono stati scelti per due motivi, il primo è che molti di questi temi fanno parte della normativa GDPR quindi è una legge a dirci che i dati appartenenti a quelle categorie sono sensibili e il secondo è che molti dei temi che verranno trattati sono già stati utilizzati negli studi sopracitati ma anche in altri studi riguardanti la privacy detection e il privacy leakage.
