--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -16,5 +16,19 @@ POPETS 2019
 
 \bibitem{dataSpectrum}
 John M.M. Rumbold, Barbara K. Pierscionek\newline
-\textit{What Are Data? A Categorization of the Data Sensitivity Spectrum}.
+\textit{What Are Data? A Categorization of the Data Sensitivity Spectrum}.\newline
+2018
+
+\bibitem{Random Forest}
+L. Breiman, "Random forests",\newline
+Mach. Learn., vol. 45, no. 1, pp. 5-32, 2001.
+
+\bibitem{USE}
+Cer, Daniel  and Yang, Yinfei  and Kong, Sheng-yi  and
+Hua, Nan  and Limtiaco, Nicole  and St. John, Rhomni  and
+Constant, Noah  and Guajardo-Cespedes, Mario  and Yuan, Steve  and
+Tar, Chris  and Strope, Brian  and Kurzweil, Ray\newline
+\textit{Universal Sentence Encoder}, 2018
+
+
 \end{thebibliography}
